# podatkovno-dz1

./: .gitignore  README.MD  README.md  alati.MD  main_flows.py  pyproject.toml
data/input/: Fzg01_40401_1.mf4  Fzg02_40402_1.mf4
prefect_implementation/detection/: IDetectionAPI.py
prefect_implementation/detection/impl/: FileDetector.py
prefect_implementation/quality_check/: IQualityCheck.py
prefect_implementation/quality_check/impl/: QualityCheck.py
processing/: calculators.py  flow.py  models.py
