[tool.poetry]
name = "prva_vjezba"
version = "0.1.0"
description = ""
authors = ["u25c05 <sven.radovinovic@avl.com>"]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "2.11.0"
pandas = "^1.5.3"
asammdf = "^7.3.12"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
